app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  namespace: eshop
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: front-end
              servicePort: 80
            path: /
#TODO : Change front end service to ClusterIP, automate installation and config of nginx ingress
